[package]
name = "rusko"
version = "0.1.1"
edition = "2018"

[dependencies]
actix = "0.12.0"
actix-multipart = "0.4.0-beta.5"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
actix-web-httpauth = "0.6.0-beta.2"
aes = "0.7.5"
base64 = "0.13.0"
block-modes = "0.8.1"
clap = "2.33.3"
derive_more = "0.99.16"
directories = "3.0.2"
enigo = "0.0.14"
env_logger = "0.9.0"
futures = "0.3.17"
jsonwebtoken = "7.2.0"
log = "0.4.14"
notify = "4.0.17"
once_cell = "1.8.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
shlex = "1.1.0"
signal-hook = "0.3.10"
tempdir = "0.3.7"
tokio = { version = "1.11.0", features = ["full"] }
toml = "0.5.8"
